Assignment-4/src/objects/Feedback__c.object
<CustomObject>
    <description>Feedback provided for a training session.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Training_Session__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>